포트폴리오 수정

--- a/index.html
+++ b/index.html
@@ -45,25 +45,25 @@
 
 <h3 class="clearer" id="employment"><strong>수상 경력</strong></h3>
 
-<p class="margin time">2015. 12. 24.</p>
+<p class="margin time">2016. 11. 25.</p>
 
-<p><strong>2015 제주대학교 공학교육혁신센터 캡스톤디자인 공모전 장려상</strong></p>
+<p><strong>2016 제주대학교 공학교육혁신센터 캡스톤디자인 공모전 장려상(스마트 카트)</strong></p>
 
-<p class="margin time">2015. 12. 5.</p>
+<p class="margin time">2017. 11. 24.</p>
 
-<p><strong>2017 제주대학교 공학교육혁신센터 캡스톤 디자인 우수상</strong></p>
+<p><strong>2017 제주대학교 공학교육혁신센터 캡스톤 디자인 우수상(IoT 소화기)</strong></p>
 
-<p class="margin time">2015. 10. 3.</p>
+<p class="margin time">2017. 11. 25.</p>
 
-<p><strong>제주대학교 컴퓨터공학과 작품전시회 개발자상</strong></p>
+<p><strong>2017 제주대학교 컴퓨터공학과 작품전시회 개발자상(ShootingGame)</strong></p>
 
-<p class="margin time">2015. 3. ~ 2017. 2.</p>
+<p class="margin time">2018. 11. 2?</p>
 
-<p><strong>2018 제주대학교 공학교육혁신센터 캡스톤 디자인 장려상</strong></p>
+<p><strong>2018 제주대학교 공학교육혁신센터 캡스톤 디자인 장려상(VR 스크래치)</strong></p>
 
-<p class="margin time">2014. 6. ~ 2014. 12.</p>
+<p class="margin time">2018. 11. 10.</p>
 
-<p><strong>2014 공학교육혁신센터  캡스톤디자인 최우수상</strong></p>
+<p><strong>2018 제주대학교 컴퓨터공학전공 작품전시회 우수상(VR 스크래치)</strong></p>
 
 
 <h3 id="education"><strong>활동내역</strong></h3>
