--- a/project.html
+++ b/project.html
@@ -76,7 +76,7 @@
             <p class="margin time">2017. 11.</p>
             <div>&nbsp;&nbsp; GoogleVR 과 Unity 를 이용하여 조이스틱으로 조종이 가능한 1인칭 슈팅게임을 개발하였습니다.</div>
             <div>Tools : Unity &nbsp;&nbsp;         &nbsp;&nbsp;Language : C# </div>
-            <div>수상 내역 <a class="check" href="" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a> 전시회사진 <a class="check" href="images/contest.jpeg">확인</a></div>
+            <div>수상 내역 <a class="check" href="" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a> 전시회사진 <a class="check" href="images/contest.jpeg">확인</a> github <a class="check" href="https://github.com/PPorotos/ShootingGame">확인</a></div>
           </div>
           <div class="clear"></div>
         </div>
@@ -118,7 +118,7 @@
             <p class="margin time">2015. 4. ~ 2015. 11.</p>
             <div>&nbsp;&nbsp; 라즈베리 파이를 이용하여 즉시 결제가 가능하고 모니터를 통해 마트와 관련된 정보를 제공할수있는 스마트카트를 개발하였습니다.</div>
             <div>Tools : Rasberry Pie &nbsp;&nbsp;         &nbsp;&nbsp;Language : Python </div>
-            <div>수상 내역 <a class="check" href="images/prize/" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a> 발표자료 <a class="check" href="data/cart.png">확인</a></div>
+            <div>수상 내역 <a class="check" href="images/prize/cart.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a> 발표자료 <a class="check" href="data/cart.png">확인</a></div>
           </div>
           <div class="clear"></div>
         </div>
@@ -144,7 +144,7 @@
             <img class="thumnail" src="images/logo.png">
           </div>
           <div class="contents right">
-            <h4 class="project-title">Unity3D를 이용한 VR교육</h4>
+            <h4 class="project-title">Unity VR교육</h4>
             <p class="margin time"></p>
             <div>&nbsp;&nbsp; 제주대학교 공학교육혁신센터에서 주관한 Unity와 GoogleVR, Vuforia를 이용해 어플리캐이션을 개발하는 교육을 수료하였습니다.
             </div>
@@ -157,7 +157,7 @@
             <img class="thumnail" src="images/vrar.png">
           </div>
           <div class="contents right">
-            <h4 class="project-title">VR/AR 콘텐츠 개발과정</h4>
+            <h4 class="project-title">VR/AR 개발과정</h4>
             <p class="margin time">2017. 9. ~ 2017. 11.</p>
             <div>&nbsp;&nbsp; 중소기업기술혁신협회에서 지역맞춤형 일자리 지원사업으로 운영한 VR/AR 콘텐츠 개발과정을 참여하여 Unity, GoogleVR, Vuforia에 대한 교육과 삼성 360도 카메라를 이용하여 촬영을 하고 삼성 기어VR 접목시키는 등의 교육을 수료하였습니다.</div>
             <div>수료 내역 <a class="check" href="images/prize/iot.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a></div>
@@ -184,7 +184,7 @@
             <h4 class="project-title">프로그래머스</h4>
             <p class="margin time">2019. 1. ~ 현재</p>
             <div>&nbsp;&nbsp; 프로그래머스 웹 사이트에서 제공하는 알고리즘 문제를 주로 C#을 이용해 풀고 있으며 현재도 계속 진행중에 있습니다.</div>
-            <div>확인자료 <a class="check" href="https://github.com/PPorotos/Algorithm" target="_blank">확인</a></div>
+            <div>github <a class="check" href="https://github.com/PPorotos/Algorithm" target="_blank">확인</a></div>
           </div>
           <div class="clear"></div>
         </div>
@@ -201,7 +201,7 @@
           </div>
           <div class="clear"></div>
         </div>
-      
+
         <div class="article">
           <div class="left">
             <img class="thumnail" src="images/computer.png">
