--- a/project.html
+++ b/project.html
@@ -227,7 +227,7 @@
           <p class="margin time">2016. 2. ~ 현재</p>
           <div>&nbsp;&nbsp; 많은 몸이 불편한사람들을 작은 힘이나마 도와줄수 있다는 생각에 아르바이트로 번 월급이나 용돈의 일부를 꾸준히 기부하고 있었습니다. 그 작은힘이 도움을 받은사람에게는 큰 희망이 되길 바라고 있습니다.
           </div>
-          <div>수료 내역 <a class="check" href="images/prize/milal.zip"  onClick="window.open(this.href, '', 'width=700, height=800'); return false;">확인</a></div>
+          <div>확인 내역 <a class="check" href="images/prize/milal.zip"  onClick="window.open(this.href, '', 'width=700, height=800'); return false;">확인</a></div>
         </div>
         <div class="clear"></div>
       </div>
