포트폴리오 수정

--- a/index.html
+++ b/index.html
@@ -53,17 +53,17 @@
 
 <p><strong>2017 제주대학교 공학교육혁신센터 캡스톤 디자인 우수상(IoT 소화기)</strong></p>
 
-<p class="margin time">2017. 11. 25.</p>
+<p class="margin time">2017. 11. 11.</p>
 
 <p><strong>2017 제주대학교 컴퓨터공학과 작품전시회 개발자상(ShootingGame)</strong></p>
-
-<p class="margin time">2018. 11. 2?</p>
-
-<p><strong>2018 제주대학교 공학교육혁신센터 캡스톤 디자인 장려상(VR 스크래치)</strong></p>
 
 <p class="margin time">2018. 11. 10.</p>
 
 <p><strong>2018 제주대학교 컴퓨터공학전공 작품전시회 우수상(VR 스크래치)</strong></p>
+
+<p class="margin time">2018. 11. 30.</p>
+
+<p><strong>2018 제주대학교 공학교육혁신센터 캡스톤 디자인 장려상(VR 스크래치)</strong></p>
 
 
 <h3 id="education"><strong>활동내역</strong></h3>
@@ -72,7 +72,7 @@
 
 <p><strong>IS-DEC(International Student Joint Capstone Design Project) 이수</strong></p>
 
-<p class="margin time">2015. 12. ~ 12. </p>
+<p class="margin time">2017. 6. 22. ~ 26. </p>
 
 <p><strong>제주대학교 공학교육혁신센터 Unity3D를 이용한 VR교육 수료</strong></p>
 
@@ -83,6 +83,18 @@
 <p class="margin time">2017. 10. ~ 2017. 12.</p>
 
 <p><strong>게임 엔진을 이용한 애니메이션 제작 프로젝트 수료</strong></p>
+
+<p class="margin time">2018. 5. 11. ~ 13.</p>
+
+<p><strong>제주대학교 공학교육혁신센터 Unity 기초교육 수료</strong></p>
+
+<p class="margin time">2018. 5. 25. ~ 27.</p>
+
+<p><strong>제주대학교 공학교육혁신센터 UX/UI 교육 수료</strong></p>
+
+<p class="margin time">2018. 11. 16. ~ 18.</p>
+
+<p><strong>제주대학교 공학교육혁신센터 블록체인 해커톤 '내가 디자인하는 블록체인 서비스' 교육 과정 이수</strong></p>
 
 <p class="margin time">2013. 6. ~ 2015. 3.</p>
 
@@ -132,8 +144,6 @@
   <li>VR/AR</li>
 
 </ul>
-
-
           </div>
 
           <div class="footer">
