--- a/project.html
+++ b/project.html
@@ -132,7 +132,7 @@
             <p class="margin time">2017. 2. ~ 2017. 8.</p>
             <div>&nbsp;&nbsp; 푸트트럭을 이용한 제주도 관광산업 활성화 웹서비스입니다. 푸드트럭의 위치정보를 웹에 있는 지도를 통해보여주고 기본적인 푸드트럭의 정보제공과 푸드트럭을 포함한 제주관광추천 웹서비스입니다.</div>
             <div>Part : 웹 기획 담당 &nbsp;&nbsp;         &nbsp;&nbsp; </div>
-            <div>이수 내역 <a class="check" href="images/prize/lincCapston.png" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a> 발표자료 <a class="check" href="data/cart.png">확인</a></div>
+            <div>이수 내역 <a class="check" href="images/prize/lincCapston.png" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a> 발표자료 <a class="check" href="data/food.pdf">확인</a></div>
           </div>
           <div class="clear"></div>
         </div>
@@ -164,6 +164,34 @@
           </div>
           <div class="clear"></div>
         </div>
+
+        <div class="article">
+          <div class="left">
+            <img class="thumnail" src="images/unity.jpeg">
+          </div>
+          <div class="contents right">
+            <h4 class="project-title">VR/AR 개발과정</h4>
+            <p class="margin time">2018. 5. 11. ~ 13.</p>
+            <div>&nbsp;&nbsp; 제주대학교 공학교육혁신센터에서 주관한 Unity 기초 교육 수업으로 Unity의 물리엔진 사용과 캐릭터 애니메이션 등의 교육을 수료하였습니다.</div>
+            <div>수료 내역 <a class="check" href="images/prize/iot.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a></div>
+          </div>
+          <div class="clear"></div>
+        </div>
+
+
+        <div class="article">
+          <div class="left">
+            <img class="thumnail" src="images/block.jpeg">
+          </div>
+          <div class="contents right">
+            <h4 class="project-title">블록체인 해커톤</h4>
+            <p class="margin time">2018. 11. 16. ~ 18.</p>
+            <div>&nbsp;&nbsp; 제주대학교 공학교육혁신센터에서 주관한 블록체인의 전반적인 이론과 실습 교육을 수료하고 배운 이론을 통하여 해커톤을 진행 하였고 좋은 성적을 거두었습니다.</div>
+            <div>수료 내역 <a class="check" href="images/prize/iot.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a> 관련 보도 <a class="check" href="http://www.newsjeju.net/news/articleView.html?idxno=321523" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a></div>
+          </div>
+          <div class="clear"></div>
+        </div>
+
         <div class="article">
           <div class="left">
             <img class="thumnail" src="images/camp.png">
@@ -176,6 +204,7 @@
           </div>
           <div class="clear"></div>
         </div>
+
         <div class="article">
           <div class="left">
             <img class="thumnail" src="images/programmers.jpeg">
@@ -198,6 +227,19 @@
             <p class="margin time">2017.10. ~ 2017. 12.</p>
             <div>&nbsp;&nbsp; ACA애니메이션센터에서 진행하는 게임엔진을 이용한 애니메이션 제작 교육을 받았습니다. Unreal엔진의 애니메이션 기법 및 모션캡처, Maya 사용 및 게임엔진에 적용하는 방법을 교육받고 애니매이션 프로젝트를 진행하였습니다.</div>
             <div>확인 내역 <a class="check" href="images/animation1.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인1</a><a class="check" href="images/animation2.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;"> 확인2</a> 제작보고서 <a class="check" href="data/ani.pdf" target="_blank">확인</a></div>
+          </div>
+          <div class="clear"></div>
+        </div>
+
+        <div class="article">
+          <div class="left">
+            <img class="thumnail" src="images/alive.jpg">
+          </div>
+          <div class="contents right">
+            <h4 class="project-title">현장실습</h4>
+            <p class="margin time">2017. 7. ~ 2017. 8.</p>
+            <div>&nbsp;&nbsp; 링크 캡스톤에서 진행하는 하계 현장실습으로 A-Live(파닥파닥)의 수산물 유통 플랫폼 서비스 회사에서 마케팅 부서에서 실습을 하였습니다. 회사에서는 하루 마케팅 이론을 공부하고 직접 페이스북 마케팅으로 접목해보는 실습을 진행하였습니다.</div>
+            <div>확인 내역 <a class="check" href="images/prize/Linc.png" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a></div>
           </div>
           <div class="clear"></div>
         </div>
@@ -230,6 +272,19 @@
           <div>확인 내역 <a class="check" href="images/prize/milal.zip"  onClick="window.open(this.href, '', 'width=700, height=800'); return false;">확인</a></div>
         </div>
         <div class="clear"></div>
+        <div class="article">
+          <div class="left">
+            <img class="thumnail" src="images/computerstudent.jpeg">
+          </div>
+          <div class="contents right">
+            <h4 class="project-title">학생임원 활동</h4>
+            <p class="margin time">2015. 1. ~ 2016. 12.</p>
+            <div>&nbsp;&nbsp; 2015년 컴퓨터공학전공 학술부 차장역임, 2016년 컴퓨터공학전공 부 학생회장 역임을 하면서 선,후배 학우들과 힘을모아 학과의 행사를 진행 하였습니다. 그 결과 공대 체육대회 종합 준우승의 좋은 결과를 얻을 수 있었습니다.
+            </div>
+            <div>활동 사진 <a class="check" href="images/student2.jpeg"  onClick="window.open(this.href, '', 'width=700, height=800'); return false;">확인1</a> <a class="check" href="images/student.jpeg"  onClick="window.open(this.href, '', 'width=700, height=800'); return false;">확인2</a></div>
+          </div>
+          <div class="clear"></div>
+
       </div>
     </div>
     </div>
