포트폴리오 수정

--- a/project.html
+++ b/project.html
@@ -170,7 +170,7 @@
             <img class="thumnail" src="images/unity.jpeg">
           </div>
           <div class="contents right">
-            <h4 class="project-title">VR/AR 개발과정</h4>
+            <h4 class="project-title">Unity 기초교육</h4>
             <p class="margin time">2018. 5. 11. ~ 13.</p>
             <div>&nbsp;&nbsp; 제주대학교 공학교육혁신센터에서 주관한 Unity 기초 교육 수업으로 Unity의 물리엔진 사용과 캐릭터 애니메이션 등의 교육을 수료하였습니다.</div>
             <div>수료 내역 <a class="check" href="images/prize/iot.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a></div>
