포트폴리오 수정

--- a/project.html
+++ b/project.html
@@ -76,7 +76,7 @@
             <p class="margin time">2017. 11.</p>
             <div>&nbsp;&nbsp; GoogleVR 과 Unity 를 이용하여 조이스틱으로 조종이 가능한 1인칭 슈팅게임을 개발하였습니다.</div>
             <div>Tools : Unity &nbsp;&nbsp;         &nbsp;&nbsp;Language : C# </div>
-            <div>수상 내역 <a class="check" href="" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a> 전시회사진 <a class="check" href="images/contest.jpeg">확인</a> github <a class="check" href="https://github.com/PPorotos/ShootingGame">확인</a></div>
+            <div>수상 내역 <a class="check" href="images/prize/vrgame.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a> 전시회사진 <a class="check" href="images/contest.jpeg">확인</a> github <a class="check" href="https://github.com/PPorotos/ShootingGame">확인</a></div>
           </div>
           <div class="clear"></div>
         </div>
@@ -90,7 +90,7 @@
             <p class="margin time">2018. 4. ~ 2018. 11.</p>
             <div>&nbsp;&nbsp; 기존에 있는 스크래치 프로그램을 VR과 접목시켜 3차원 공간안에서 이루어지는 스크래치 프로그램을 개발하였습니다.</div>
             <div>Tools : Unity &nbsp;&nbsp;         &nbsp;&nbsp;Language : C# </div>
-            <div>수상 내역 <a class="check" href="images/prize/jjickmuk.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a> </div>
+            <div>수상 내역 <a class="check" href="images/prize/vrscratch.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인1 </a><a class="check" href="images/prize/vrscratch전시회.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인2</a> </div>
           </div>
           <div class="clear"></div>
         </div>
@@ -148,7 +148,7 @@
             <p class="margin time"></p>
             <div>&nbsp;&nbsp; 제주대학교 공학교육혁신센터에서 주관한 Unity와 GoogleVR, Vuforia를 이용해 어플리캐이션을 개발하는 교육을 수료하였습니다.
             </div>
-            <div>수료 내역 <a class="check" href="http://webzine.jejunu.ac.kr/board/bbs/board.php?bo_table=news&wr_id=3318&page=0"  onClick="window.open(this.href, '', 'width=700, height=800'); return false;">확인</a></div>
+            <div>수료 내역 <a class="check" href="images/prize/vrstudy.jpg"  onClick="window.open(this.href, '', 'width=700, height=800'); return false;">확인</a></div>
           </div>
           <div class="clear"></div>
         </div>
@@ -173,7 +173,7 @@
             <h4 class="project-title">Unity 기초교육</h4>
             <p class="margin time">2018. 5. 11. ~ 13.</p>
             <div>&nbsp;&nbsp; 제주대학교 공학교육혁신센터에서 주관한 Unity 기초 교육 수업으로 Unity의 물리엔진 사용과 캐릭터 애니메이션 등의 교육을 수료하였습니다.</div>
-            <div>수료 내역 <a class="check" href="images/prize/iot.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a></div>
+            <div>수료 내역 <a class="check" href="images/prize/unity기초.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a></div>
           </div>
           <div class="clear"></div>
         </div>
@@ -187,7 +187,7 @@
             <h4 class="project-title">블록체인 해커톤</h4>
             <p class="margin time">2018. 11. 16. ~ 18.</p>
             <div>&nbsp;&nbsp; 제주대학교 공학교육혁신센터에서 주관한 블록체인의 전반적인 이론과 실습 교육을 수료하고 배운 이론을 통하여 해커톤을 진행 하였고 좋은 성적을 거두었습니다.</div>
-            <div>수료 내역 <a class="check" href="images/prize/iot.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a> 관련 보도 <a class="check" href="http://www.newsjeju.net/news/articleView.html?idxno=321523" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a></div>
+            <div>수료 내역 <a class="check" href="images/prize/block.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a> 관련 보도 <a class="check" href="http://www.newsjeju.net/news/articleView.html?idxno=321523" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a></div>
           </div>
           <div class="clear"></div>
         </div>
