포트폴리오 수정

--- a/project.html
+++ b/project.html
@@ -160,7 +160,7 @@
             <h4 class="project-title">VR/AR 개발과정</h4>
             <p class="margin time">2017. 9. ~ 2017. 11.</p>
             <div>&nbsp;&nbsp; 중소기업기술혁신협회에서 지역맞춤형 일자리 지원사업으로 운영한 VR/AR 콘텐츠 개발과정을 참여하여 Unity, GoogleVR, Vuforia에 대한 교육과 삼성 360도 카메라를 이용하여 촬영을 하고 삼성 기어VR 접목시키는 등의 교육을 수료하였습니다.</div>
-            <div>수료 내역 <a class="check" href="images/prize/iot.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a></div>
+            <div>참가 티켓 <a class="check" href="https://www.onoffmix.com/event/ticket/107182" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a></div>
           </div>
           <div class="clear"></div>
         </div>
