포트폴리오 수정

--- a/project.html
+++ b/project.html
@@ -88,7 +88,7 @@
           <div class="contents right">
             <h4 class="project-title">VR 스크래치</h4>
             <p class="margin time">2018. 4. ~ 2018. 11.</p>
-            <div>&nbsp;&nbsp; 기존에 있는 스크래치 프로그램을 VR과 접목시켜 3차원 공간안에서 이루어지는 스크래치 프로그램을 개발하였습니다.</div>
+            <div>&nbsp;&nbsp; 기존에 있는 스크래치 프로그램을 VR과 접목시켜 3차원 공간안에서 이루어지는 스크래치 프로그램을 개발하였습니다. (현재 캡스톤 프로젝트가 끝난 후 다시 같은 아이디어로 프로그램을 다시 개발 계획입니다.)</div>
             <div>Tools : Unity &nbsp;&nbsp;         &nbsp;&nbsp;Language : C# </div>
             <div>수상 내역 <a class="check" href="images/prize/vrscratch.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인1 </a><a class="check" href="images/prize/vrscratch전시회.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인2</a> </div>
           </div>
@@ -160,7 +160,7 @@
             <h4 class="project-title">VR/AR 개발과정</h4>
             <p class="margin time">2017. 9. ~ 2017. 11.</p>
             <div>&nbsp;&nbsp; 중소기업기술혁신협회에서 지역맞춤형 일자리 지원사업으로 운영한 VR/AR 콘텐츠 개발과정을 참여하여 Unity, GoogleVR, Vuforia에 대한 교육과 삼성 360도 카메라를 이용하여 촬영을 하고 삼성 기어VR 접목시키는 등의 교육을 수료하였습니다.</div>
-            <div>참가 티켓 <a class="check" href="https://www.onoffmix.com/event/ticket/107182" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a></div>
+            <div>참가 티켓 <a class="check" href="images/prize/iot.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인</a></div>
           </div>
           <div class="clear"></div>
         </div>
