포트폴리오 수정

--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
 <p><strong>밀알복지재단 소정금액 기부</strong> <br>
 ->밀알 복지재단으로 매달 소정의 금액을 기부를 하고있습니다.
 
-<p class="margin time">2013. 6. ~ 2013. 10.</p>
+<!-- <p class="margin time">2013. 6. ~ 2013. 10.</p>
 
 <p><strong>지역 농촌 봉사활동</strong> <br>
-->지역 환경미화와 농촌의 부족한 일손을 도와주는 봉사활동을 하였습니다.
+->지역 환경미화와 농촌의 부족한 일손을 도와주는 봉사활동을 하였습니다. -->
 
 
 <h3 id="programming-languages-frameworks-and-tools"><strong>관심분야</strong></h3>
