--- a/project.html
+++ b/project.html
@@ -88,7 +88,7 @@
           <div class="contents right">
             <h4 class="project-title">VR 스크래치</h4>
             <p class="margin time">2018. 4. ~ 2018. 11.</p>
-            <div>&nbsp;&nbsp; 기존에 있는 스크래치 프로그램을 VR과 접목시켜 3차원 공간안에서 이루어지는 스크래치 프로그램을 개발하였습니다. (현재 캡스톤 프로젝트가 끝난 후 다시 같은 아이디어로 프로그램을 다시 개발 계획입니다.)</div>
+            <div>&nbsp;&nbsp; 기존에 있는 스크래치 프로그램을 VR과 접목시켜 3차원 공간안에서 이루어지는 스크래치 프로그램을 개발하였습니다. (현재 캡스톤 프로젝트가 끝난 후 같은 아이디어로 프로그램을 다시 개발 계획입니다.)</div>
             <div>Tools : Unity &nbsp;&nbsp;         &nbsp;&nbsp;Language : C# </div>
             <div>수상 내역 <a class="check" href="images/prize/vrscratch.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인1 </a><a class="check" href="images/prize/vrscratch전시회.jpg" onClick="window.open(this.href, '', 'width=300, height=430'); return false;">확인2</a> </div>
           </div>
