페이지 수정

--- a/holo.html
+++ b/holo.html
@@ -141,6 +141,8 @@
         <div class="gif-container">
           <img src="capture/screenshare.gif" alt="영상통화">
         </div>
+        <ui>프로젝트 보안상의 문제로 화상 통화 기능은 
+          데모 버전을 만들어 첨부합니다.</ui>
       </section>
     </div>
   </main>
