포트폴리오 수정

--- a/Kisti.html
+++ b/Kisti.html
@@ -147,7 +147,7 @@
       </ul>
       <div class="gif-container">
           <img src="capture/agora_1.PNG" alt="화상채팅 화면">
-          <img src="capture/agora_2.PNG" alt="화상채팅 화면">
+          <img src="capture/agora_2.PNG" alt="화상채팅 화면2">
       </div>
     </section>
     </div>
