포트폴리오 수정

--- a/index.html
+++ b/index.html
@@ -183,7 +183,63 @@
         </aside>
         <main class="main">
             <div id="content-area">
-                <!-- 이력서, 경력 등 기존 내용은 삭제해도 됩니다. -->
+                <!-- 소개 섹션 시작 -->
+                <section class="intro-section">
+                    <style>
+                        .intro-section {
+                            max-width: 900px;
+                            line-height: 1.9;
+                        }
+
+                        .intro-section .intro-title {
+                            font-size: 28px;
+                            font-weight: 800;
+                            letter-spacing: -.02em;
+                            margin: 0 0 28px;
+                            color: #111;
+                        }
+
+                        .intro-section .lead {
+                            font-size: 20px;
+                            margin: 0 0 18px;
+                            color: #111;
+                        }
+
+                        .intro-section p {
+                            font-size: 20px;
+                            margin: 0 0 18px;
+                            color: #111;
+                        }
+
+                        @media (max-width:640px) {
+                            .intro-section .intro-title {
+                                font-size: 22px;
+                            }
+
+                            .intro-section .lead,
+                            .intro-section p {
+                                font-size: 18px;
+                            }
+                        }
+                    </style>
+
+                    <h2 class="intro-title">‘방법은 반드시 있다.’ 라는 생각을 가지고 개발하는 클라이언트 개발자 입니다.</h2>
+
+                    <p class="lead">유니티 클라이언트 개발자 김정훈입니다.</p>
+
+                    <p>저는 이전 회사에서 메타버스 팀장을 맡아 유니티를 활용하여 클라이언트 개발 담당과 기획, 디자인 파트 팀원들과의 일정을 조율하며 개발 업무를 진행하였습니다.</p>
+
+                    <p>메타버스 프로젝트는 유니티를 메인 엔진으로 사용하여 유저 동기화, 화상 채팅, 텍스트 채팅, 미니 게임 콘텐츠 제작을 진행하였습니다. 그리고 매주 주간 보고를 통해 기획,
+                        디자인 개발의 일정을 확인하고 리스크를 조율 및 관리하였습니다.</p>
+
+                    <p>한 번은 화상 채팅 기능을 개발할 때 개발한 데모에서 프레임이 떨어지는 현상이 있었고, 이 현상을 고치는데 많은 시간을 할애할 수 없는 상황이었습니다.</p>
+
+                    <p>그래도 저는 제 좌우명인 ‘방법은 반드시 있다’라는 생각으로 에셋 스토어의 Agora 화상 채팅 에셋을 찾아 프로젝트에 빠르게 이식을 진행하였고, 프로젝트를 성공적으로
+                        안드로이드와 iOS로 출시할 수 있었습니다.</p>
+
+                    <p>이렇듯 저는 ‘방법은 반드시 있다’라는 생각으로 문제가 생겨도 다른 방식을 찾아 해결하는 클라이언트 개발자입니다.</p>
+                </section>
+                <!-- 소개 섹션 끝 -->
             </div>
         </main>
         <script>
