--- a/Skill.html
+++ b/Skill.html
@@ -115,7 +115,7 @@
                 </ul>
                 <h4>ETC</h4>
                 <ul>
-                    <li>TortoiseSVN</li>
+                    <li>TortoiseSVN, Git</li>
                 </ul>
             </section>
         </div>
