--- a/Profile.html
+++ b/Profile.html
@@ -114,7 +114,7 @@
         <div class="section-title">학력</div>
         <ul class="edu-list">
             <li>2009 – 2011 &nbsp; 제주 세화 고등학교</li>
-            <li>2012 – 2019 &nbsp; 제주대학교 컴퓨터공학전공 이수</li>
+            <li>2012 – 2019 &nbsp; 제주대학교 컴퓨터공학전공 수료</li>
         </ul>
     </section>
 
